OllyTiper.2.0/OllyTiper/Plugin.h


typedef unsigned char  uchar;          
typedef unsigned short ushort;         
typedef unsigned long  ulong;          
#define TEXTLEN        256             
#define SHORTLEN       8               
typedef struct t_bar {
  int            nbar;                 
  int            font;                 
  int            dx[NBAR];             
  int            defdx[NBAR];          
  char           *name[NBAR];          
  uchar          mode[NBAR];           
  int            captured;             
  int            active;               
  int            prevx;                
} t_bar;
typedef int  DRAWFUNC(char *,char *,int *,t_sortheader *,int);
typedef struct t_sorted {              
  char           name[MAX_PATH];       
  int            n;                    
  int            nmax;                 
  int            selected;             
  ulong          seladdr;              
  int            itemsize;             
  ulong          version;              
  void           *data;                
  SORTFUNC       *sortfunc;            
  DESTFUNC       *destfunc;            
  int            sort;                 
  int            sorted;               
  int            *index;               
  int            suppresserr;          
} t_sorted;
typedef struct t_table {               
  HWND           hw;                   
  t_sorted       data;                 
  t_bar          bar;                  
  int            showbar;              
  short          hscroll;              
  short          colsel;               
  int            mode;                 
  int            font;                 
  short          scheme;               
  short          hilite;               
  int            offset;               
  int            xshift;               
  DRAWFUNC       *drawfunc;            
} t_table;
#define INT3           0xCC            
#define DEC_TYPEMASK   0x1F            
typedef struct t_reg {                 
  int            modified;             
  int            modifiedbyuser;       
  int            singlestep;           
  ulong          r[8];                 
  ulong          ip;                   
  ulong          flags;                
  int            top;                  
  long double    f[8];                 
  char           tag[8];               
  ulong          fst;                  
  ulong          fcw;                  
  ulong          s[6];                 
  ulong          base[6];              
  ulong          limit[6];             
  char           big[6];               
  ulong          dr6;                  
  ulong          threadid;             
  ulong          lasterror;            
  int            ssevalid;             
  int            ssemodified;          
  char           ssereg[8][16];        
  ulong          mxcsr;                
  int            selected;             
  ulong          drlin[4];             
  ulong          dr7;                  
} t_reg;
typedef struct t_result {              
  int            type;                 
  int            dtype;                
  union {
    uchar        data[10];             
    ulong        u;                    
    long         l;                    
    long double  f; };                 
  union {
    char         value[TEXTLEN];       
    wchar_t      wvalue[TEXTLEN/2]; }; 
  ulong          lvaddr;               
} t_result;
extc int     cdecl Expression(t_result *result,char *expression,int a,int b,
               uchar *data,ulong database,ulong datasize,ulong threadid);
typedef struct t_thread {              
  ulong          threadid;             
  ulong          dummy;                
  ulong          type;                 
  HANDLE         thread;               
  ulong          datablock;            
  ulong          entry;                
  ulong          stacktop;             
  ulong          stackbottom;          
  CONTEXT        context;              
  t_reg          reg;                  
  int            regvalid;             
  t_reg          oldreg;               
  int            oldregvalid;          
  int            suspendcount;         
  long           usertime;             
  long           systime;              
  ulong          reserved[16];         
} t_thread;
extc HWND    cdecl Createthreadwindow(void);
extc t_thread* cdecl Findthread(ulong threadid);
extc int     cdecl Decodethreadname(char *s,ulong threadid,int mode);
extc ulong   cdecl Getcputhreadid(void);
extc ulong   cdecl Runsinglethread(ulong threadid);
extc void    cdecl Restoreallthreads(void);
#define MM_RESTORE     0x01            
#define MM_SILENT      0x02            
#define MM_DELANAL     0x04            
#define MM_RESILENT    (MM_RESTORE|MM_SILENT)
typedef struct t_memory {              
  ulong          base;                 
  ulong          size;                 
  ulong          type;                 
  ulong          owner;                
  ulong          initaccess;           
  ulong          access;               
  ulong          threadid;             
  char           sect[SHORTLEN];       
  uchar          *copy;                
  ulong          reserved[8];          
} t_memory;
typedef struct t_heap {                
  ulong          base;                 
  ulong          size;                 
  ulong          type;                 
  ulong          parent;               
} t_heap;
extc int     cdecl Listmemory(void);
extc t_memory* cdecl Findmemory(ulong addr);
extc int     cdecl Guardmemory(ulong base,ulong size,int guard);
extc void    cdecl Havecopyofmemory(uchar *copy,ulong base,ulong size);
extc ulong   cdecl Readmemory(void *buf,ulong addr,ulong size,int mode);
extc ulong   cdecl Writememory(void *buf,ulong addr,ulong size,int mode);
extc ulong   cdecl Readcommand(ulong ip,char *cmd);
#define NVERS          32              
#define JT_JUMP        0               
#define JT_COND        1               
#define JT_SWITCH      2               
typedef struct t_ahint {               
  ulong          addr;                 
  ulong          size;                 
  ulong          type;                 
} t_ahint;
typedef struct t_stringtable {         
  ulong          name;                 
  ulong          language;             
  ulong          addr;                 
  ulong          size;                 
} t_stringtable;
typedef struct t_fixup {
  ulong          base;                 
  ulong          size;                 
} t_fixup;
typedef struct t_symvar {              
  int            next;                 
  ushort         kind;                 
  union {
    ulong        type;                 
    ulong        regs; };              
  union {
    ulong        addr;                 
    long         offset; };            
  ulong          size;                 
  int            optvar;               
  ulong          nameaddr;             
} t_symvar;
typedef struct t_jdest {               
  char           type;                 
  ulong          from;                 
  ulong          to;                   
} t_jdest;
typedef struct t_module {              
  ulong          base;                 
  ulong          size;                 
  ulong          type;                 
  ulong          codebase;             
  ulong          codesize;             
  ulong          resbase;              
  ulong          ressize;              
  t_stringtable  *stringtable;         
  int            nstringtable;         
  int            maxstringtable;       
  ulong          entry;                
  ulong          database;             
  ulong          idatatable;           
  ulong          idatabase;            
  ulong          edatatable;           
  ulong          edatasize;            
  ulong          reloctable;           
  ulong          relocsize;            
  char           name[SHORTLEN];       
  char           path[MAX_PATH];       
  int            nsect;                
  IMAGE_SECTION_HEADER *sect;          
  ulong          headersize;           
  ulong          fixupbase;            
  int            nfixup;               
  t_fixup        *fixup;               
  char           *codedec;             
  ulong          codecrc;              
  char           *hittrace;            
  char           *hittracecopy;        
  char           *datadec;             
  t_table        namelist;             
  t_symvar       *symvar;              
  int            nsymvar;              
  int            maxsymvar;            
  char           *globaltypes;         
  ulong          mainentry;            
  ulong          realsfxentry;         
  int            updatenamelist;       
  ulong          origcodesize;         
  ulong          sfxbase;              
  ulong          sfxsize;              
  int            issystemdll;          
  int            processed;            
  int            dbghelpsym;           
  char           version[NVERS];       
  t_jdest        *jddata;              
  int            njddata;              
  ulong          reserved[15];         
} t_module;
extc t_module* cdecl Findmodule(ulong addr);
extc t_fixup* cdecl Findfixup(t_module *pmod,ulong addr);
extc uchar*  cdecl Finddecode(ulong addr,ulong *psize);
extc ulong   cdecl Findfileoffset(t_module *pmod,ulong addr);
extc int     cdecl Decoderange(ulong addr,ulong size,char *s);
extc int     cdecl Analysecode(t_module *pm);